fixed overflowing width and containers

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,7 +2,7 @@
   position: relative;
   justify-items: left;
   width: 50vw;
-  height: 90vh;
+  height: 80vh;
 }
 
 .carousel {
@@ -12,11 +12,14 @@
   height: 45%;
 }
 
+.h3 {
+  position: relative;
+  font-size: 1.3em;
+}
+
 .about {
   position: relative;
   margin-top: 0.5em;
-  height: 100vh;
-  width: 100vw;
 }
 
 .about-right {
@@ -34,4 +37,18 @@
   width: 5em;
   position: relative;
   left: 1%;
+}
+
+@media screen and (max-width: 600px) {
+  #about img{
+    position: relative;
+    width: 100%;
+    height: 84%;
+    margin-left: 5%;
+    transform: translateY(-1%);
+  }
+
+  .row{
+    justify-content: center;
+  }
 }
