--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
   position: fixed;
   align-content: center;
   top: 0;
-  height: 50px;
+  height: 60px;
   width: 100%;
 }
 
@@ -17,14 +17,14 @@
   font-size: 1.15em;
 }
 
-.nav-link:hover {
+/* .nav-link:hover {
   color: white;
   font-weight: thin;
   text-decoration: burlywood;
   border-bottom: 1px solid black;
-}
+} */
 
-@media (min-width: 992px) {
+@media (min-width: 600px) {
   .nav-link {
     padding-left: 2rem !important;
     padding-right: 2rem !important;
