--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -8,5 +8,4 @@
 .projects {
   position: relative;
   margin-top: 2em;
-  height: 100vh;
 }
